# Life_BSO

./: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/jhderojas/bsoofyourlife/: CaptureRetryPolicy.kt  InferenceClient.kt  LocalOnDevicePredictor.kt  MainActivity.kt  ObjectMusicMapper.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/jhderojas/bsoofyourlife/: CaptureRetryPolicyTest.kt  InferenceClientTest.kt  ObjectMusicMapperTest.kt
backend/: Dockerfile  Makefile  README.md  logger.py  main.py  music_mapper.py  pyproject.toml
backend/scripts/: run.sh
backend/tests/: test_logger.py  test_music_mapper.py
frontend/web/: Dockerfile  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/web/src/: App.tsx  Camera.css  Camera.tsx  main.tsx
frontend/web/src/components/: CaptureButton.test.tsx  CaptureButton.tsx  Prediction.test.tsx  Prediction.tsx  Title.test.tsx  Title.tsx  VideoFeed.test.tsx  VideoFeed.tsx
